<resources>
    <string name="app_name">Widget&amp;Dialogues</string>
    <string name="button">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="toast_and_button">Toast and Button</string>
    <string name="toggle">Toggle</string>
    <string name="song">Song</string>
    <string name="movie">Movie</string>
    <string name="book">Book</string>
    <string name="prefered_entertainement_checkbox">Prefered Entertainement (CheckBox)</string>
    <string name="textview">TextView</string>
    <string name="fav_ent">Fav Ent</string>
    <string name="alert_close">Alert Close</string>
    <string name="alert_dialog">alert dialog</string>
    <string name="spinner_dropdown">Spinner | DropDown</string>

    <string-array name="city">
        <item>Taguig</item>
        <item>Pasay</item>
        <item>cavite</item>
        <item>Tagaytay</item>
    </string-array>
</resources>